--- a/index.html
+++ b/index.html
@@ -164,14 +164,9 @@
 								<form method="post" action="#">
 									<div>
 										<div class="powr-form-builder" id="688821f9_1618631718"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
-										</div>
+										<div class="powr-reviews" id="1f2cff73_1618635485"></div><script src="https://www.powr.io/powr.js?platform=html"></script></div>
 										<div class="row 200%">
-											<div class="12u">
-												<ul class="actions">
-													<li><input type="submit" value="Page up" /></li>
-													<li><input type="reset" value="Clear Form" class="alt" /></li>
-												</ul>
-											</div>
+											
 										</div>
 									</div>
 								</form>
