--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	</head>
-	<body>
-
+	<body class="content">
+<div class="loader-wrapper">
+				<div class="loader"></div>
+				
+				<div class="loader-section section-left"></div>
+				<div class="loader-section section-right"></div>
+			  </div>
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
