--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
 					
 				</article>
 			</div>
-
+<script>
+			setTimeout(function(){
+  $('body').addClass('loaded');
+}, 2000);
+		</script>
 	</body>
 </html>
