--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						</div>
 						<div class="8u">
 							<header>
-								<h1><div><span id="role"  style="font-weight: bold; color:palevioletred"></div></h1><h1>I'm <strong>Pooja Thakur</strong>.</h1>
+								<h1><div><span id="role"  style="font-weight: bold; color:palevioletred;font-size:60px;"></div></h1><h1>I'm <strong>Pooja Thakur</strong>.</h1>
 							</header>
 							<p>Yha par tera self introduction ayega <strong>soch lena </strong> Kya dalna hhh </a> &amp; ok agsamgbgial balgbab babgj bjjsdba bjlasb b </p>
 							<a href="#work" class="button big scrolly">Learn about what I do</a>
