--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
         }
 			::-webkit-scrollbar-track {
 	border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: whitesmoke;
 }
 
 ::-webkit-scrollbar {
-	width: 12px;
-  height: 12px;
+	width: 20px;
+  height: 15px;
   background-color: #dfe6e9;
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: #e78632;
+	background-color: palevioletred;
   background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,.3) 20%,transparent 20%,transparent 40%,rgba(255, 255, 255, 0.3) 40%,rgba(255,255,255,.3) 60%,transparent 60%,transparent 80%,rgba(255, 255, 255, 0.3) 80%);
   border-radius: 10px;
 }
