--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   gtag('config', 'UA-188670775-1');
 </script>
+	  <script data-ad-client="ca-pub-2284994971962052" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
