--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
                   <!-- End Title -->
                   <p>Hi,I am Kartik</p>
                   <ul>
-                    <li>I Developed This Website For Gate Metallurgy Students here you have All Stuff at</li>
-                    <li>One Place. <strong>Like.</strong> </li>
+                    <li>I Developed This Website For Gate Metallurgy Students here you have Everything at One.</li>
+                    <li><strong>Like.</strong> </li>
                     <a style="font-family: cursive;"><strong>1.</strong> Chapter-Wise Previous Year Questions </a> <br>
                     <a style="font-family: cursive;"><strong>2.</strong> Previous Year Question Papers As Quiz and Pdf Also </a> <br>
                     <a style="font-family: cursive;"><strong>3.</strong> NPTEL Notes According To Gate-MT Syllabus-2022</a> <br>
@@ -464,7 +464,7 @@
               </div>
               <div class="col-lg-6 col-md-6">
                 <div class="mu-about-us-right">                            
-                <a id="" href="hbd.mp3" target="">
+                <a id="" href="ETA.mp3" target="">
                   <img src="assets/img/about-us.jpg" alt="img">
                 </a>                
                 </div>
