--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
             <!-- Start Title -->
             <div class="mu-title">
               <h2 style="font-family: cursive; color: #F2AA4CFF;">Important Books</h2>
-              <p>It is important for the candidates to choose the best books to prepare for the GATE Metallurgy exam. Given below are some of the best books for GATE Metallurgy exam for the students</p>
+              <p>It is important for the candidates to choose the best books to prepare for the GATE Metallurgy exam.</p>
             </div>
             <!-- End Title -->
             <!-- Start latest course content -->
