--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Othrs<span class="fa fa-angle-down"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="Pre-Year Question papers.html">Previous Year Question Papers</a></li>  
-                <li><a href="#">Chapter Wise PY Questions</a></li>              
+                <li><a href="Chapterwise-previous Year Questions.html">Chapter Wise PY Questions</a></li>              
                 <li><a href="Sylubas.html">Syllabus-2021</a></li>  
                 <li><a href="#">Books Archive</a></li>       
                    
