--- a/Books2.html
+++ b/Books2.html
@@ -209,7 +209,7 @@ font-weight: bold;
 
  <!-- Start contact  -->
  <div class="container">
- <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name"></div>
+ <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search Function Work Only On pc....." title="Type in a name"></div>
 
 <ul id="myUL">
   <li  style="display: none;"><a href="Books.html#Callister Materials Science and Engineering An Introduction">Callister Materials Science and Engineering An Introduction </a></li>
