--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <!-- Start single service -->
             <div class="mu-service-single">
               <span class="fa fa-bell"></span>
-              <h3 style="font-weight: bold;">Nortifications</h3>
+              <h3 style="font-weight: bold;">AIR-1</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima officiis, deleniti dolorem exercitationem praesentium, est!</p>
             </div>
             <!-- Start single service -->
