--- a/Upload Notes.html
+++ b/Upload Notes.html
@@ -215,7 +215,8 @@
 
  <!-- Start contact  -->
  <div id="ff-compose" style="margin: 5px; margin-right: 3px;"></div>
-<script async defer src="https://formfacade.com/include/118248082051025442710/form/1FAIpQLSdiGNVuw4vPYhJpEH33ow6KBaJ4YFH-v-DE4iLPycysy6pJ5w/classic.js?div=ff-compose"></script>
+<div class="container" id="ff-compose"></div>
+<script async defer src="https://formfacade.com/include/118248082051025442710/form/1FAIpQLSdiGNVuw4vPYhJpEH33ow6KBaJ4YFH-v-DE4iLPycysy6pJ5w/bootstrap.js?div=ff-compose"></script>
 
   <!-- Start footer -->
   <footer id="mu-footer">
