--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gate-MT | Home</title>
 <script data-ad-client="ca-pub-8102602897089739" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="assets/fonts/TisaSansPro-ExtraLight.woff2">
