--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           </button>
           <!-- LOGO -->              
           <!-- TEXT BASED LOGO -->
-          <a class="navbar-brand" href="index.html"><i class="fa fa-bolt"></i><span>Gate-MT</span></a>
+          <a class="navbar-brand" href="index.html"><span><img src="assets/img/logo.png" alt="logo"></span></a>
           <!-- IMG BASED LOGO  -->
           <!-- <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="logo"></a> -->
         </div>
