--- a/index.html
+++ b/index.html
@@ -737,6 +737,9 @@
               </div>
             </div>
             <!-- End latest course content -->
+		   <div>
+            <a href="books.html" target="_blank" style="float: right;"><button class="glow-on-hover" type="button">Read More!</button></a>
+          </div>
           </div>
         </div>
       </div>
