--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
 	      
       </div>
     </div>
-	   <div>
+	   <div style="margin-top: 45px; background-color: #EC1362;">
             <a href="books.html" target="_blank" style="float: right;"><button class="glow-on-hover" type="button">Read More!</button></a>
           </div>
   </section>
