--- a/index.html
+++ b/index.html
@@ -744,10 +744,11 @@
 	      
       </div>
     </div>
-	   <div style="margin-top: 45px; background-color: #EC1362;">
+	   
+  </section>
+	  <div style="margin-top: 45px; background-color: #EC1362; margin-right: 8px;">
             <a href="books.html" target="_blank" style="float: right;"><button class="glow-on-hover" type="button">Read More!</button></a>
           </div>
-  </section>
   <!-- End latest course section -->
 
   <!-- Start our teacher -->
