--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 	   
   </section>
 	  <div style="margin-top: 45px; background-color: #EC1362; margin-right: 8px;">
-            <a href="books.html" target="_blank" style="float: right;"><button class="glow-on-hover" type="button">Read More!</button></a>
+            <a href="Books.html" target="_blank" style="float: right;"><button class="glow-on-hover" type="button">Read More!</button></a>
           </div>
   <!-- End latest course section -->
 
