--- a/index.html
+++ b/index.html
@@ -746,9 +746,8 @@
     </div>
 	   
   </section>
-	  <div style="margin-top: 45px; background-color: #EC1362; margin-right: 8px;">
-            <a href="Books.html" target="_blank" style="float: right;"><button class="glow-on-hover" type="button">Read More!</button></a>
-          </div>
+	 
+            <a href="Books.html" target="_blank" style="float: right; margin-top: 45px; background-color: #EC1362; margin-right: 8px;"><button class="glow-on-hover" type="button">Read More!</button></a>
   <!-- End latest course section -->
 
   <!-- Start our teacher -->
