--- a/index.html
+++ b/index.html
@@ -741,12 +741,12 @@
           </div>
 		
         </div>
-	  <a href="Books.html" target="_blank" style="float: right; margin-top: 45px; background-color: #EC1362; margin-right: 8px;"><button class="glow-on-hover" type="button">Read More!</button></a>     
+	 
       </div>
     </div>
 	   
   </section>
-	 
+	 <a href="Books.html" target="_blank" style="float: right; margin-top: 20px; margin-right: 8px;"><button class="glow-on-hover" type="button">Read More!</button></a>      
            
   <!-- End latest course section -->
 
