--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
 	 
       </div>
     </div>
-	 <a href="Books.html" target="_blank" style="float: right; margin-top: 30px; margin-right: 14px;"><button class="glow-on-hover" type="button">Read More!</button></a>      
+	 <a href="Books.html" target="_blank" style="float: right; margin-top: 30px; margin-right: 14px;"><button class="glow-on-hover" type="button"><strong>Read More!</strong></button></a>      
               
   </section>
 	
