--- a/Books2.html
+++ b/Books2.html
@@ -7,7 +7,7 @@
     <title>Gate-MT | Books</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
     <!-- Font awesome -->
     <link href="assets/css/font-awesome.css" rel="stylesheet">
@@ -133,7 +133,7 @@ font-weight: bold;
           </button>
           <!-- LOGO -->              
           <!-- TEXT BASED LOGO -->
-          <a class="navbar-brand" href="index.html"><i class="fa fa-bolt"></i><span>Gate-MT</span></a>
+          <a class="navbar-brand" href="index.html"><span><img src="assets/img/logo.png" alt="logo"></span></a>
           <!-- IMG BASED LOGO  -->
           <!-- <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="logo"></a> -->
         </div>
@@ -297,7 +297,7 @@ font-weight: bold;
                         <p>Book Size:- 3-5 MB</p>
                         <div class="mu-latest-course-single-contbottom">
                           <a class="mu-course-details" href="#" target="_blank">(G-Drive) <i class="fa fa-folder-open"></i></a>
-                          <span class="mu-course-price" href="https://onedrive.live.com/View.aspx?resid=F2CAE0F1CBEDABA6!180&wdEmbedFS=1&authkey=!AP40FgC12hhUTpo"> <button class="btnk" style="background-color:#F4A261; color: white; border: none;" >(One-Drive) <i class="fa fa-folder-open"></i></button></span>
+                          <a class="mu-course-price" href="https://onedrive.live.com/View.aspx?resid=F2CAE0F1CBEDABA6!180&wdEmbedFS=1&authkey=!AP40FgC12hhUTpo"> <button class="btnk" style="background-color:#F4A261; color: white; border: none;" >(One-Drive) <i class="fa fa-folder-open"></i></button></a>
                         </div>
                       </div>
                     </div>
@@ -319,7 +319,7 @@ font-weight: bold;
                     <p>Book Size:- 30-35 MB</p>
                         <div class="mu-latest-course-single-contbottom">
                           <a class="mu-course-details" href="https://drive.google.com/file/d/1wPZBakQK_lxsZH6KCaKdOQ0a41ra6LC4/view?usp=sharing" target="_blank">(G-Drive) <i class="fa fa-folder-open"></i></a>
-                          <span class="mu-course-price" href="#"> <button class="btnk" style="background-color:#E76F51; color: white; border: none;" >(One-Drive) <i class="fa fa-folder-open"></i></button></span>
+                          <a class="mu-course-price" href="#"> <button class="btnk" style="background-color:#E76F51; color: white; border: none;" >(One-Drive) <i class="fa fa-folder-open"></i></button></a>
                         </div>
                       </div>
                     </div> 
