--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Notes <span class="fa fa-angle-down"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#mu-our-teacher">Study Material</a></li>                
-                <li><a href="#">Nith-Classroom Notes</a></li>   
+                <li><a href="Study Material.html">Study Material</a></li>                
+                <li><a href="#mu-our-teacher">Toppers-Classroom Notes</a></li>   
                             
               </ul>
             </li>           
