--- a/index.html
+++ b/index.html
@@ -411,21 +411,21 @@
               <a href="Sylubas.html" style="color: white;" target="_blank">
               <span  class="fa fa-book"></span>
               <h3 style="font-weight: bold;">Syllabus (MT)</h3>
-              <p >85% of the questions will be asked from core subject + Engineering Mathema and remaining 15%  from General aptitude</p></a>
+              <p >85% of the questions will be asked from core subject + Engineering Mathema and remaining 15%  from General aptitude.</p></a>
             </div>
             <!-- Start single service -->
             <!-- Start single service -->
             <div class="mu-service-single">
-              <span class="fa fa-bell"></span>
-              <h3 style="font-weight: bold;">AIR-1</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima officiis, deleniti dolorem exercitationem praesentium, est!</p>
+              <span class="fa fa-group"></span>
+              <h3 style="font-weight: bold;">Toppers Talk</h3>
+              <p>This Section Contains GATE-MT Top 100 Rankers Study-Material Suggestions and Their Preparation Strategy & Other Important Points.</p>
             </div>
             <!-- Start single service -->
             <!-- Start single service -->
             <div class="mu-service-single">
               <span class="fa fa-table"></span>
               <h3 style="font-weight: bold;">Subject Wise Weightage</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima officiis, deleniti dolorem exercitationem praesentium, est!</p>
+              <p>Subject Wise Weightage is an important component for candidates which will Help to candidates prepare accordingly.</p>
             </div>
             <!-- Start single service -->
           </div>
