--- a/index.html
+++ b/index.html
@@ -416,16 +416,18 @@
             <!-- Start single service -->
             <!-- Start single service -->
             <div class="mu-service-single">
+		    <a href="Toppers Talk.html" style="color: white;" target="_blank">
               <span class="fa fa-group"></span>
               <h3 style="font-weight: bold;">Toppers Talk</h3>
-              <p>This Section Contains GATE-MT Top 100 Rankers Study-Material Suggestions and Their Preparation Strategy & Other Important Points.</p>
+              <p>This Section Contains GATE-MT Top 100 Rankers Study-Material Suggestions and Their Preparation Strategy & Other Important Points.</p></a>
             </div>
             <!-- Start single service -->
             <!-- Start single service -->
             <div class="mu-service-single">
+		     <a href="S.html" style="color: white;" target="_blank">
               <span class="fa fa-table"></span>
               <h3 style="font-weight: bold;">Subject Wise Weightage</h3>
-              <p>Subject Wise Weightage is an important component for candidates which will Help to candidates prepare accordingly.</p>
+              <p>Subject Wise Weightage is an important component for candidates which will Help to candidates prepare accordingly.</p></a>
             </div>
             <!-- Start single service -->
           </div>
