--- a/Toppers Talk.html
+++ b/Toppers Talk.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>Gate-MT | Upload Notes Here</title>
+    <title>Gate-MT | Toppers Talk</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
