--- a/Toppers Talk.html
+++ b/Toppers Talk.html
@@ -298,10 +298,11 @@ border-top-right-radius: 30px;
 <a class="trigger_popup_fricc" target="_blank"> <button class="btn"><i class="fa fa-user"></i><strong> AIR-1 [2021] B.VINITH</strong></button></a>
 
 <a class="trigger_popup_fricc1" target="_blank"> <button class="btn" style="background-color: tomato;"><i class="fa fa-user"></i><strong> AIR-82 [2021] Nikhil Kumar NITH </strong></button></a>
+<br>
 <a class="trigger_popup_fricc2" target="_blank"> <button class="btn"><i class="fa fa-user"></i><strong> AIR-1 [2018] Saurav Kumar Singh </strong></button></a>
-<a class="trigger_popup_fricc" target="_blank"> <button class="btn"><i class="fa fa-user"></i><strong> AIR-1 [2019] </strong></button></a>
-<a class="trigger_popup_fricc" target="_blank"> <button class="btn"><i class="fa fa-user"></i><strong> AIR-1 [2020] </strong></button></a>
-<a class="trigger_popup_fricc" target="_blank"> <button class="btn"><i class="fa fa-user"></i><strong> AIR-1 [20217] </strong></button></a>
+<a class="trigger_popup_fricc" target="_blank"> <button class="btn"><i class="fa fa-user"></i><strong> AIR-1 [2019] Coming Soon</strong></button></a>
+<a class="trigger_popup_fricc" target="_blank"> <button class="btn"><i class="fa fa-user"></i><strong> AIR-1 [2020] Coming Soon</strong></button></a>
+<a class="trigger_popup_fricc" target="_blank"> <button class="btn"><i class="fa fa-user"></i><strong> AIR-1 [20217] Coming Soon</strong></button></a>
 </p>
 
  <div class="hover_bkgr_fricc" id="t0">
