--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                     <p>Author:- William D. Callister,jr., David G. Rethwisch</p>
                     <p>Book Size:- 20-25 MB</p>
                     <div class="mu-latest-course-single-contbottom">
-                      <a class="mu-course-details" href="#"><i class="fa fa-download"> Download</i></a>
+                      <a class="mu-course-details" href="https://onedrive.live.com/?authkey=%21AIId2bLnumL4mEk&cid=F2CAE0F1CBEDABA6&id=F2CAE0F1CBEDABA6%21246&parId=F2CAE0F1CBEDABA6%21186&o=OneUp"><i class="fa fa-download"> Download</i></a>
                       <span class="mu-course-price" href="#"><i class="fa fa-chain-broken"></i> Report</span>
                     </div>
                   </div>
@@ -689,7 +689,7 @@
                     <p>Publisher:- PHI Learning</p>
                     <p>Book Size:- 6-7 MB</p>
                     <div class="mu-latest-course-single-contbottom">
-                      <a class="mu-course-details" href="#"><i class="fa fa-download"> Download</i></a>
+                      <a class="mu-course-details" href="https://onedrive.live.com/?authkey=%21AFvfE0Tfj%2DBN86o&cid=F2CAE0F1CBEDABA6&id=F2CAE0F1CBEDABA6%21243&parId=F2CAE0F1CBEDABA6%21184&o=OneUp"><i class="fa fa-download"> Download</i></a>
                       <span class="mu-course-price" href="#"><i class="fa fa-chain-broken"></i> Report</span>
                     </div>
                   </div>
@@ -710,7 +710,7 @@
                     <p>Publisher:- McGraw-Hill Company</p>
                     <p>Book Size:- 50-80 MB</p>
                     <div class="mu-latest-course-single-contbottom">
-                      <a class="mu-course-details" href="#"><i class="fa fa-download"> Download</i></a>
+                      <a class="mu-course-details" href="https://onedrive.live.com/?authkey=%21ANMryz7ezzwNgKo&cid=F2CAE0F1CBEDABA6&id=F2CAE0F1CBEDABA6%21247&parId=F2CAE0F1CBEDABA6%21187&o=OneUp"><i class="fa fa-download"> Download</i></a>
                       <span class="mu-course-price" href="#"><i class="fa fa-chain-broken"></i> Report</span>
                     </div>
                   </div>
@@ -731,7 +731,7 @@
                     <p>Publisher:- PHI Learning</p>
                     <p>Book Size:- 10-19 MB</p>
                     <div class="mu-latest-course-single-contbottom">
-                      <a class="mu-course-details" href="#"><i class="fa fa-download"> Download</i></a>
+                      <a class="mu-course-details" href="https://onedrive.live.com/?authkey=%21AD45hPWlZE%2Dsg7M&cid=F2CAE0F1CBEDABA6&id=F2CAE0F1CBEDABA6%21245&parId=F2CAE0F1CBEDABA6%21185&o=OneUp"><i class="fa fa-download"> Download</i></a>
                       <span class="mu-course-price" href="#"><i class="fa fa-chain-broken"></i> Report</span>
                     </div>
                   </div>
@@ -842,7 +842,7 @@
             <!-- End our teacher content -->           
           </div>
           <div>
-            <a href="Section Major.html" target="_blank" style="float: right;"><button class="glow-on-hover" type="button">Read More!</button></a>
+            <a href="Study Material.html" target="_blank" style="float: right;"><button class="glow-on-hover" type="button">Read More!</button></a>
           </div>
         </div>
       </div>
