--- a/index.html
+++ b/index.html
@@ -597,7 +597,16 @@
     </div>
   </section>
   <!-- End features section -->
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '6882c16cdbfa94a675b637729fc4fa71',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.creativeformatsnetwork.com/6882c16cdbfa94a675b637729fc4fa71/invoke.js"></scr' + 'ipt>');
+</script>
   <!-- Start latest course section -->
   <section id="mu-latest-courses" style="font-family:Tisa;">
     <div class="container">
