--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
               <div class="col-lg-3 col-md-3 col-sm-3">
                 <div class="mu-abtus-counter-single no-border">
                   <span class="fa fa-user-secret"></span>
-                  <h4 class="counter">250</h4>
+                  <h4 class="counter">25000</h4>
                   <p>Unique Visitors / Mo.</p>
                 </div>
               </div>
@@ -591,6 +591,26 @@
               </div>
             </div>
 		<i style=" text-align: center;">  <script type="text/javascript">
+	atOptions = {
+		'key' : '6882c16cdbfa94a675b637729fc4fa71',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.creativeformatsnetwork.com/6882c16cdbfa94a675b637729fc4fa71/invoke.js"></scr' + 'ipt>');
+</script></i>
+		  <i style=" text-align: center;">  <script type="text/javascript">
+	atOptions = {
+		'key' : '6882c16cdbfa94a675b637729fc4fa71',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.creativeformatsnetwork.com/6882c16cdbfa94a675b637729fc4fa71/invoke.js"></scr' + 'ipt>');
+</script></i>
+		  <i style=" text-align: center;">  <script type="text/javascript">
 	atOptions = {
 		'key' : '6882c16cdbfa94a675b637729fc4fa71',
 		'format' : 'iframe',
