--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                 </div>
               </div>
             </div>
-		<i style=" text-align: center;">  <script type="text/javascript">
+		<i style=" text-align: center;  margin-left: 5%;">  <script type="text/javascript">
 	atOptions = {
 		'key' : '6882c16cdbfa94a675b637729fc4fa71',
 		'format' : 'iframe',
@@ -610,16 +610,7 @@
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.creativeformatsnetwork.com/6882c16cdbfa94a675b637729fc4fa71/invoke.js"></scr' + 'ipt>');
 </script></i>
-		  <i style=" text-align: center;">  <script type="text/javascript">
-	atOptions = {
-		'key' : '6882c16cdbfa94a675b637729fc4fa71',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.creativeformatsnetwork.com/6882c16cdbfa94a675b637729fc4fa71/invoke.js"></scr' + 'ipt>');
-</script></i>
+		
 		  
 		  <i style=" text-align: center;">  <script type="text/javascript">
 	atOptions = {
