--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                 </div>
               </div>
             </div>
-		<i style=" text-align: center;  margin-left: 6%;">  <script type="text/javascript">
+		<CENter><i style=" text-align: center;">  <script type="text/javascript">
 	atOptions = {
 		'key' : '6882c16cdbfa94a675b637729fc4fa71',
 		'format' : 'iframe',
@@ -599,8 +599,8 @@
 		'params' : {}
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.creativeformatsnetwork.com/6882c16cdbfa94a675b637729fc4fa71/invoke.js"></scr' + 'ipt>');
-</script></i>
-		  <i style=" text-align: center;  margin-left: 6%;">  <script type="text/javascript">
+</script></i></CENter>
+		<CENter>  <i style=" text-align: center;">  <script type="text/javascript">
 	atOptions = {
 		'key' : '6882c16cdbfa94a675b637729fc4fa71',
 		'format' : 'iframe',
@@ -609,10 +609,10 @@
 		'params' : {}
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.creativeformatsnetwork.com/6882c16cdbfa94a675b637729fc4fa71/invoke.js"></scr' + 'ipt>');
-</script></i>
+</script></i></CENter>
 		
 		  
-		  <i style=" text-align: center;  margin-left: 6%;">  <script type="text/javascript">
+		<CENter>  <i style=" text-align: center;">  <script type="text/javascript">
 	atOptions = {
 		'key' : '6882c16cdbfa94a675b637729fc4fa71',
 		'format' : 'iframe',
@@ -621,7 +621,7 @@
 		'params' : {}
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.creativeformatsnetwork.com/6882c16cdbfa94a675b637729fc4fa71/invoke.js"></scr' + 'ipt>');
-			  </script></i>
+			  </script></i></CENter>
             <!-- End features content -->
           </div>
         </div>
