--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
 		'params' : {}
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.creativeformatsnetwork.com/6882c16cdbfa94a675b637729fc4fa71/invoke.js"></scr' + 'ipt>');
-</script></i></CENter>
-		<CENter>  <i style=" text-align: center;">  <script type="text/javascript">
+</script></i>
+	  <i style=" text-align: center;">  <script type="text/javascript">
 	atOptions = {
 		'key' : '6882c16cdbfa94a675b637729fc4fa71',
 		'format' : 'iframe',
@@ -609,10 +609,10 @@
 		'params' : {}
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.creativeformatsnetwork.com/6882c16cdbfa94a675b637729fc4fa71/invoke.js"></scr' + 'ipt>');
-</script></i></CENter>
+</script></i>
 		
 		  
-		<CENter>  <i style=" text-align: center;">  <script type="text/javascript">
+		 <i style=" text-align: center;">  <script type="text/javascript">
 	atOptions = {
 		'key' : '6882c16cdbfa94a675b637729fc4fa71',
 		'format' : 'iframe',
