--- a/index.html
+++ b/index.html
@@ -1041,6 +1041,7 @@
         <div class="mu-footer-bottom-area">
         
           <p>&copy; All Right Reserved. Designed by <a href="#" rel="nofollow">Kartik</a></p>
+		<div class="powr-hit-counter" id="6c1e09b3_1623497509"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
         </div>
       </div>
     </div>
