--- a/Study Material.html
+++ b/Study Material.html
@@ -234,7 +234,7 @@
 <!-- Start contact  --></span></span>
 
   <!-- Start footer -->
-  <footer id="mu-footer" style="margin-top: 190px;">
+  <footer id="mu-footer">
     <!-- start footer top -->
    
     
