--- a/Study Material.html
+++ b/Study Material.html
@@ -252,37 +252,37 @@
         <div class="holder">
   <a href="https://onedrive.live.com/?authkey=%21AJyAYdAMSttjlzA&id=F2CAE0F1CBEDABA6%21183&cid=F2CAE0F1CBEDABA6">
   <div class="bar"><img src="Books/folder.png" alt="" width="158px" height="105px"></div>
-<iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21183&authkey=AJyAYdAMSttjlzA" width="165" height="128" frameborder="0" scrolling="no" ></iframe>
+<iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21183&authkey=AJyAYdAMSttjlzA" width="" height="128" frameborder="0" scrolling="no" ></iframe>
 </a>
 </div>
         <div class="holder">
   <a href="https://onedrive.live.com/?authkey=%21ADnfGTVjSJrgDns&id=F2CAE0F1CBEDABA6%21184&cid=F2CAE0F1CBEDABA6">
   <div class="bar"><img src="Books/folder.png" alt="" width="158px" height="105px"></div>
-<iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21184&authkey=ADnfGTVjSJrgDns" width="165" height="128" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21184&authkey=ADnfGTVjSJrgDns" width="" height="128" frameborder="0" scrolling="no"></iframe>
 </a>
 </div>
         <div class="holder">
   <a href="https://onedrive.live.com/?authkey=%21AAGXa%2DM8gJDTtdw&id=F2CAE0F1CBEDABA6%21185&cid=F2CAE0F1CBEDABA6">
   <div class="bar"><img src="Books/folder.png" alt="" width="158px" height="105px"></div>
- <iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21185&authkey=AAGXa-M8gJDTtdw" width="165" height="128" frameborder="0" scrolling="no"></iframe></span>
+ <iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21185&authkey=AAGXa-M8gJDTtdw" width="" height="128" frameborder="0" scrolling="no"></iframe></span>
 </a>
 </div>
         <div class="holder">
   <a href="https://onedrive.live.com/?authkey=%21AFw%2Da7VXgqUhEoI&id=F2CAE0F1CBEDABA6%21186&cid=F2CAE0F1CBEDABA6">
   <div class="bar"><img src="Books/folder.png" alt="" width="158px" height="105px"></div>
- <iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21186&authkey=AFw-a7VXgqUhEoI" width="165" height="128" frameborder="0" scrolling="no"></iframe>
+ <iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21186&authkey=AFw-a7VXgqUhEoI" width="" height="128" frameborder="0" scrolling="no"></iframe>
 </a>
 </div>
         <div class="holder">
   <a href="https://onedrive.live.com/?authkey=%21AIUuin3LrxCqL%2Ds&id=F2CAE0F1CBEDABA6%21187&cid=F2CAE0F1CBEDABA6">
   <div class="bar"><img src="Books/folder.png" alt="" width="158px" height="105px"></div>
-<iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21187&authkey=AIUuin3LrxCqL-s" width="165" height="128" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21187&authkey=AIUuin3LrxCqL-s" width="" height="128" frameborder="0" scrolling="no"></iframe>
 </a>
 </div>
         <div class="holder">
   <a href="https://onedrive.live.com/?authkey=%21ABzwsg%2DHJGVA2%2DY&id=F2CAE0F1CBEDABA6%21188&cid=F2CAE0F1CBEDABA6">
   <div class="bar"><img src="Books/folder.png" alt="" width="158px" height="105px"></div>
- <iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21188&authkey=ABzwsg-HJGVA2-Y" width="165" height="128" frameborder="0" scrolling="no"></iframe>
+ <iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21188&authkey=ABzwsg-HJGVA2-Y" width="" height="128" frameborder="0" scrolling="no"></iframe>
 </a>
 </div>
         
