--- a/Study Material.html
+++ b/Study Material.html
@@ -250,7 +250,7 @@
         <div class="holder">
   <a href="https://onedrive.live.com/?authkey=%21AJyAYdAMSttjlzA&id=F2CAE0F1CBEDABA6%21183&cid=F2CAE0F1CBEDABA6">
   <div class="bar"><img src="Books/folder.png" alt="" width="158px" height="105px"></div>
-<iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21183&authkey=AJyAYdAMSttjlzA" width="" height="128" frameborder="0" scrolling="no" ></iframe>
+<iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21183&authkey=AJyAYdAMSttjlzA" width="157px" height="128" frameborder="0" scrolling="no" ></iframe>
 </a>
 </div>
        
@@ -259,13 +259,13 @@
         <div class="holder">
   <a href="https://onedrive.live.com/?authkey=%21ADnfGTVjSJrgDns&id=F2CAE0F1CBEDABA6%21184&cid=F2CAE0F1CBEDABA6">
   <div class="bar"><img src="Books/folder.png" alt="" width="158px" height="105px"></div>
-<iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21184&authkey=ADnfGTVjSJrgDns" width="" height="128" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21184&authkey=ADnfGTVjSJrgDns" width="157px" height="128" frameborder="0" scrolling="no"></iframe>
 </a>
 </div>
         <div class="holder">
   <a href="https://onedrive.live.com/?authkey=%21AAGXa%2DM8gJDTtdw&id=F2CAE0F1CBEDABA6%21185&cid=F2CAE0F1CBEDABA6">
   <div class="bar"><img src="Books/folder.png" alt="" width="158px" height="105px"></div>
- <iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21185&authkey=AAGXa-M8gJDTtdw" width="" height="128" frameborder="0" scrolling="no"></iframe></span>
+ <iframe src="https://onedrive.live.com/embed?cid=F2CAE0F1CBEDABA6&resid=F2CAE0F1CBEDABA6%21185&authkey=AAGXa-M8gJDTtdw" width="157px" height="128" frameborder="0" scrolling="no"></iframe></span>
 </a>
 </div>
         <div class="holder">
