--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
               <div class="col-lg-6 col-md-6">
                 <div class="mu-about-us-right"  style="border-radius: 10px;">                            
                 <a  href="ETA.mp3" target="_blank">
-                  <img src="assets/img/About-us.png" alt="img" style="background-color:#242f3f;">
+                  <img src="assets/img/About-us.png" alt="img" style="background-color:black;">
                 </a>                
                 </div>
               </div>
