--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
                 <div class="col-md-4 col-sm-4">
                   <article class="mu-blog-single-item">
                     <figure class="mu-blog-single-img">
-                      <a href="#"><img src="Previous Year question Chapter wise PIC/xrd.png" alt="img"></a>
+                      <a href="#"><img src="Previous Year question Chapter wise PIC/xrd2.png" alt="img"></a>
                       <figcaption class="mu-blog-caption">
                         <h3 style="font-family: tisa;"><a href="#"><strong>X-Ray Diffraction [XRD]</strong></a></h3>
                       </figcaption>                      
