--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <div class="col-lg-12 col-md-12">
           <div class="mu-service-area">
             <!-- Start single service -->
-            <div class="mu-service-single">
+            <div class="mu-service-single" style="border-radius: 10px;">
               <a href="Sylubas.html" style="color: white;" target="_blank">
               <span  class="fa fa-book"></span>
               <h3 style="font-weight: bold;">Syllabus (MT)</h3>
@@ -420,7 +420,7 @@
             </div>
             <!-- Start single service -->
             <!-- Start single service -->
-            <div class="mu-service-single">
+            <div class="mu-service-single" style="border-radius: 10px;">
 		    <a href="Toppers Talk.html" style="color: white;" target="_blank">
               <span class="fa fa-group"></span>
               <h3 style="font-weight: bold;">Toppers Talk</h3>
@@ -428,7 +428,7 @@
             </div>
             <!-- Start single service -->
             <!-- Start single service -->
-            <div class="mu-service-single">
+            <div class="mu-service-single" style="border-radius: 10px;">
 		     <a href="S.html" style="color: white;" target="_blank">
               <span class="fa fa-table"></span>
               <h3 style="font-weight: bold;">Subject Wise Weightage</h3>
