--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
               <span  class="fa fa-book"></span>
               <h3 style="font-weight: bold;">Syllabus (MT)</h3>
               <p >85% of the questions will be asked from core subject + Engineering Mathema and remaining 15%  from General aptitude.</p></a>
-            </div>
+            </div><br>
             <!-- Start single service -->
             <!-- Start single service -->
             <div class="mu-service-single" style="border-radius: 15px;">
@@ -426,6 +426,7 @@
               <h3 style="font-weight: bold;">Toppers Talk</h3>
               <p>This Section Contains GATE-MT Top 100 Rankers Study-Material Suggestions and Their Preparation Strategy & Other Important Points.</p></a>
             </div>
+<br>
             <!-- Start single service -->
             <!-- Start single service -->
             <div class="mu-service-single" style="border-radius: 15px;">
