--- a/index.html
+++ b/index.html
@@ -994,16 +994,16 @@
                 <div class="col-md-4 col-sm-4">
                   <article class="mu-blog-single-item">
                     <figure class="mu-blog-single-img">
-                      <a href="#"><img src="Previous Year question Chapter wise PIC/Iron&steel making.jpg" alt="img"></a>
+                      <a href="#"><img src="Previous Year question Chapter wise PIC/Metal joining.jpg" alt="img"></a>
                       <figcaption class="mu-blog-caption">
-                        <h3 style="font-family: tisa;"><a href="#"><strong>Iron & Steel Making</strong></a></h3>
+                        <h3 style="font-family: tisa;"><a href="#"><strong>Metal Joining</strong></a></h3>
                       </figcaption>                      
                     </figure>
                     <div class="mu-blog-meta">
                       
                       <div class="mu-blog-description">
                       
-                        <a class="mu-read-more-btn" href="Section Major.html" style="float: left;"><strong>Open</strong></a>
+                        <a class="mu-read-more-btn" href="https://drive.google.com/drive/folders/1xIjsu-Rjei8ZyZzTRcRR1ydQ_3uzwjb8?usp=sharing" style="float: left;"><strong>Open</strong></a>
                         <a class="mu-read-more-btn" href="Section Major.html"  style="float: right;"><strong>Read More</strong></a>
                       </div>
                     </div>
