--- a/index.html
+++ b/index.html
@@ -598,6 +598,8 @@
                 </div>
               </div>
             </div>
+		   <P style="text-align: center; color: white; background-color: red; padding:10px; font-size: 15px; margin-left: 2%; width:96%"><strong>* Ads Section</strong> </P>  
+        
 		<CENter><i style=" text-align: center;">  <script type="text/javascript">
 	atOptions = {
 		'key' : '6882c16cdbfa94a675b637729fc4fa71',
@@ -889,6 +891,8 @@
     </div>
   </section>
    </div>
+	   <P style="text-align: center; color: white; background-color: red; padding:10px; font-size: 15px; margin-left: 2%; width:96%"><strong>* Ads Section</strong> </P>  
+        
 	     <script async="async" data-cfasync="false" src="//pl16350250.safestcontentgate.com/0881ee4fefe8cc03d701d1ca60c840c2/invoke.js"></script>
 <div id="container-0881ee4fefe8cc03d701d1ca60c840c2"></div>
  
