--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                 </div>
               </div>
             </div>
-		   <P style="text-align: center; color: white; background-color: red; padding:10px; font-size: 15px; margin-left: 2%; width:96%"><strong>* Ads Section</strong> </P>  
+		   <div><i style="text-align: center; color: white; background-color: red; padding:10px; font-size: 15px; width:96%"><strong>* Ads Section</strong>   </i></div>
         
 		<CENter><i style=" text-align: center;">  <script type="text/javascript">
 	atOptions = {
@@ -891,7 +891,7 @@
     </div>
   </section>
    </div>
-	   <P style="text-align: center; color: white; background-color: red; padding:10px; font-size: 15px; margin-left: 2%; width:96%"><strong>* Ads Section</strong> </P>  
+	  <div><i style="text-align: center; color: white; background-color: red; padding:10px; font-size: 15px; width:96%"><strong>* Ads Section</strong>   </i></div>
         
 	     <script async="async" data-cfasync="false" src="//pl16350250.safestcontentgate.com/0881ee4fefe8cc03d701d1ca60c840c2/invoke.js"></script>
 <div id="container-0881ee4fefe8cc03d701d1ca60c840c2"></div>
