--- a/Study Material.html
+++ b/Study Material.html
@@ -109,32 +109,8 @@
         }
         /*loader end*/
         
-      .holder{
-  margin-left: 20px;
-  text-align: center;
-  height: 128px;
-  margin-bottom: 25px;
-    width: 158px;
-    position: relative;
-    float: left;
-}
+     
 
-.frame{
-  margin-left: -1px;
-  width: 158px;
-    height: 128px;
-  
-}
-
-.bar{
-    position: absolute;
-  
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 40px;
-
-}
 </style>
 
   </head>
@@ -243,6 +219,7 @@
 
     <span style="display: block; text-align: center;">
       <span>
+	       <P style="text-align: center; color: white; background-color: darkslategrey; padding:19px; font-size: 15px; margin-left: 1%; width:97.8%; position:absolute; " ><strong>* Gate-MT Study Material Folders</strong> </P>  
 	    <iframe src="https://app.box.com/embed/s/56w4oj7elk59ekme3oyao8ryzi9q7jkb?sortColumn=name&view=list" width="98%" height="500" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe> 
 
     </span>
