--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 {
     margin-top: 1rem;
     height: 0.2rem;
-    width: 10rem;
+    width: 14rem;
     background: #b3b3b3;
 }
 .progressbar::after
@@ -263,7 +263,9 @@ h1
   }
         /*loader end*/
         
-      
+      ::-webkit-scrollbar {
+    display: none;
+}
 
 
 
