--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Fancybox slider -->
     <link rel="stylesheet" href="assets/css/jquery.fancybox.css" type="text/css" media="screen" /> 
     <!-- Theme color -->
-    <link id="switcher" href="assets/css/theme-color/green-theme.css" rel="stylesheet">          
+    <link id="switcher" href="assets/css/theme-color/pink-theme.css" rel="stylesheet">          
 
     <!-- Main style sheet -->
     <link href="assets/css/style.css" rel="stylesheet">   
@@ -281,7 +281,7 @@ h1
        
 </div>
 <div class="progressbar"></div>
-<h1>* Some Time it take upto 30 sec. to load</h1>
+<h1>* Please Use Desktop For better Experience !Some Time it take upto 30 sec. to load</h1>
 
   </div>
   <!--START SCROLL TOP BUTTON -->
