--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@ h1
             <!-- start title -->
             <div class="mu-title">
               <h2 style="font-family:TisaSansPro; color: #3097BF;">ChapterWise Previous Year Questions</h2>
-              <p>In This section All previous year chapterwise questions are in form of <strong>Quiz</strong> </p>
+              <p>This Section Contains Chapter Wise Previous Year Questions</p>
             </div>
             <!-- end title -->  
             <!-- start from blog content   -->
