--- a/index.html
+++ b/index.html
@@ -923,15 +923,17 @@ h1
               <div class="mu-testimonial-item">
                 <div class="mu-testimonial-quote">
                   <blockquote>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem rerum soluta aperiam blanditiis obcaecati eveniet aliquam consequatur nobis eaque id.</p>
+                    <p><strong> Designer And Devloper of this Website </strong></p>
+                    <p style="color: yellow;"><i>Follow us </i></p>
+                    <p style="font-size: x-large;"><a href="" style="color: rgb(20, 165, 20);"><i class="fa fa-whatsapp"></i></a> <a href="" style="color:orangered;"><i class="fa fa-instagram"></i></a> <a href="" style="color:#0078d4;"><i class="fa fa-linkedin-square"></i></a> <a href="" style="color:aqua;"><i class="fa fa-facebook-square"></i> </a> </p>
                   </blockquote>
                 </div>
                 <div class="mu-testimonial-img">
-                  <img src="assets/img/testimonial-1.png" alt="img">
+                  <img src="kartik.jpg" alt="img">
                 </div>
                 <div class="mu-testimonial-info">
-                  <h4>John Doe</h4>
-                  <span>Happy Student</span>
+                  <h4>Kartik</h4>
+                  <span>Founder</span>
                 </div>
               </div>
               <!-- end testimonial single item -->
@@ -939,19 +941,21 @@ h1
               <div class="mu-testimonial-item">
                 <div class="mu-testimonial-quote">
                   <blockquote>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem rerum soluta aperiam blanditiis obcaecati eveniet aliquam consequatur nobis eaque id.</p>
+                    <p><strong> Resource Provider,Technical Support</strong></p>
+                    <p style="color: yellow;"><i>Follow us </i></p>
+                    <p style="font-size: x-large;"><a href="" style="color: rgb(20, 165, 20);"><i class="fa fa-whatsapp"></i></a> <a href="" style="color:orangered;"><i class="fa fa-instagram"></i></a> <a href="" style="color:#0078d4;"><i class="fa fa-linkedin-square"></i></a> <a href="" style="color:aqua;"><i class="fa fa-facebook-square"></i> </a> </p>
                   </blockquote>
                 </div>
                 <div class="mu-testimonial-img">
-                  <img src="assets/img/testimonial-3.png" alt="img">
+                  <img src="parshant.jpg" alt="img">
                 </div>
                 <div class="mu-testimonial-info">
-                  <h4>Rebaca Michel</h4>
-                  <span>Happy Parent</span>
+                  <h4>Parshant Bhardwaj</h4>
+                  <span>Co-Founder</span>
                 </div>
               </div>
               <!-- end testimonial single item -->
-              <!-- start testimonial single item -->
+              <!-- start testimonial single item
               <div class="mu-testimonial-item">
                 <div class="mu-testimonial-quote">
                   <blockquote>
@@ -966,7 +970,7 @@ h1
                   <span>Happy Student</span>
                 </div>
               </div>
-              <!-- end testimonial single item -->
+              end testimonial single item -->
             </div>
           </div>
         </div>
