--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@ h1
                   <blockquote>
                     <p><strong> Designer And Devloper of this Website </strong></p>
                     <p style="color: yellow;"><i>Follow us </i></p>
-                    <p style="font-size: x-large;"><a href="" style="color: rgb(20, 165, 20);"><i class="fa fa-whatsapp"></i></a> <a href="https://instagram.com/kartikpabdi?utm_medium=copy_link" style="color:orangered;"><i class="fa fa-instagram"></i></a> <a href="www.linkedin.com/in/kartik-188020" style="color:#0078d4;"><i class="fa fa-linkedin-square"></i></a> <a href="https://www.facebook.com/kartik.meena.33886" style="color:aqua;"><i class="fa fa-facebook-square"></i> </a> </p>
+                    <p style="font-size: x-large;"><a href="" style="color: rgb(20, 165, 20);"><i class="fa fa-paper-plane"></i></a> <a href="https://instagram.com/kartikpabdi?utm_medium=copy_link" style="color:orangered;"><i class="fa fa-instagram"></i></a> <a href="www.linkedin.com/in/kartik-188020" style="color:#0078d4;"><i class="fa fa-linkedin-square"></i></a> <a href="https://www.facebook.com/kartik.meena.33886" style="color:aqua;"><i class="fa fa-facebook-square"></i> </a> </p>
                   </blockquote>
                 </div>
                 <div class="mu-testimonial-img">
@@ -943,7 +943,7 @@ h1
                   <blockquote>
                     <p><strong> Resource Provider,Technical Support</strong></p>
                     <p style="color: yellow;"><i>Follow us </i></p>
-                    <p style="font-size: x-large;"><a href="" style="color: rgb(20, 165, 20);"><i class="fa fa-whatsapp"></i></a> <a href="https://instagram.com/parshant9546?utm_medium=copy_link" style="color:orangered;"><i class="fa fa-instagram"></i></a> <a href="https://www.linkedin.com/in/parshant-bhardwaj-mse-11301918b" style="color:#0078d4;"><i class="fa fa-linkedin-square"></i></a> <a href="https://www.facebook.com/ParshantBhardwaj95" style="color:aqua;"><i class="fa fa-facebook-square"></i> </a> </p>
+                    <p style="font-size: x-large;"><a href="" style="color: rgb(20, 165, 20);"><i class="fa fa-paper-plane"></i></a> <a href="https://instagram.com/parshant9546?utm_medium=copy_link" style="color:orangered;"><i class="fa fa-instagram"></i></a> <a href="https://www.linkedin.com/in/parshant-bhardwaj-mse-11301918b" style="color:#0078d4;"><i class="fa fa-linkedin-square"></i></a> <a href="https://www.facebook.com/ParshantBhardwaj95" style="color:aqua;"><i class="fa fa-facebook-square"></i> </a> </p>
                   </blockquote>
                 </div>
                 <div class="mu-testimonial-img">
