--- a/Sylubas.html
+++ b/Sylubas.html
@@ -256,7 +256,7 @@ padding: 3px;
             <li class="active">2022</li>
           </ol>
           <p class="down">
-            Download As <i class="fa fa-file-pdf-o"></i> <a href="slyb.pdf" target="_blank"> <button class="btn"><i class="fa fa-download"></i> <strong>Download</strong></button></a>
+            Download As <i class="fa fa-file-pdf-o"></i> <a href="https://drive.google.com/drive/folders/1uRGDOHaAL8wHIe5WxIZibD8TXEHrCVtT?usp=sharing" target="_blank"> <button class="btn"><i class="fa fa-download"></i> <strong>Download</strong></button></a>
           </p>
          
          </div>
