--- a/Sylubas.html
+++ b/Sylubas.html
@@ -40,7 +40,7 @@
     font-family:Arial, Helvetica, sans-serif;
     margin-left: 1%;
     font-size: 22px;
-    color: blueviolet;
+    color: red;
     font-weight: bold;
   }
   .detail{
