--- a/Sylubas.html
+++ b/Sylubas.html
@@ -7,7 +7,7 @@
     <title>Gate-MT | Syllabus</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
     <!-- Font awesome -->
     <link href="assets/css/font-awesome.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     <!-- Fancybox slider -->
     <link rel="stylesheet" href="assets/css/jquery.fancybox.css" type="text/css" media="screen" /> 
     <!-- Theme color -->
-    <link id="switcher" href="assets/css/theme-color/violet-theme.css" rel="stylesheet">    
+    <link id="switcher" href="assets/css/theme-color/pink-theme.css" rel="stylesheet">    
 
     <!-- Main style sheet -->
     <link href="assets/css/style.css" rel="stylesheet">    
