--- a/Books.html
+++ b/Books.html
@@ -231,9 +231,9 @@ font-weight: bold;
                         </a>
                       </li>
                       <li class="active" ><a href="Books.html">1</a></li>
-                      <li ><a href="Books2.html">2</a></li>
+                      <li ><a href="#">2</a></li>
                       <li>
-                        <a href="Books2.html" aria-label="Next">
+                        <a href="#" aria-label="Next">
                          Next <span class="fa fa-angle-right"></span>
                         </a>
                       </li>
